<resources>
    <string name="app_name">Raven</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_key_server_ip">address</string>
    <string name="pref_server_ip">Server IP address</string>
    <string name="pref_server_ip_default_value">192.168.1.10</string>

    <string name="pref_key_net_monitor">network_monitor</string>
    <string name="pref_title_net_monitor">Enable network data monitor</string>
    <string name="pref_title_net_monitor_summary">Show sent and received bytes</string>

    <string name="pref_key_server_port">port</string>
    <string name="pref_server_port">Server port number</string>
    <string name="pref_server_port_default_value">9090</string>

    <string name="pref_key_adaptivity">adaptivity</string>
    <string name="pref_title_adaptivity">Adapt video quality</string>
    <string name="pref_title_adaptivity_summary">Automatically switch to best possible quality</string>


    <string name="title_activity_servers">Servers List</string>
    <string name="choose_server">Select server</string>
    <string name="sender_app_label">Video recorder</string>
    <string name="receiver_app_label">Video playback</string>

    <string name="pref_key_saved_servers">servers</string>
    <string name="pref_saved_servers_default_value">[]</string>

</resources>
