<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_net_monitor"
        android:summary="@string/pref_title_net_monitor_summary"
        android:title="@string/pref_title_net_monitor" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_ip_default_value"
        android:inputType="text|number"
        android:key="@string/pref_key_server_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_ip" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_port_default_value"
        android:inputType="number"
        android:key="@string/pref_key_server_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_port" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_adaptivity"
        android:summary="@string/pref_title_adaptivity_summary"
        android:title="@string/pref_title_adaptivity" />

</PreferenceScreen>
