<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_ip_default_value"
        android:inputType="text|number"
        android:key="@string/pref_key_server_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_ip" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_port_default_value"
        android:inputType="number"
        android:key="@string/pref_key_server_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_port" />

</PreferenceScreen>
